Add `Transaction.scriptExecutionOk` field
